# JsonERS

./: CMakeLists.txt  README.md  input.json  jan.json  vcpkg.json
Src/: CMakeLists.txt  input.json
Src/JSON/: JSON.cpp
Tests/: CMakeLists.txt
Tests/JSON_TEST/: tests.cpp
